Un peu plus de style

--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,35 @@
 .App {
     display: flex;
-    justify-content: center;
-    height: 100%;
-}
-
-button {
-    border-radius: 5px;
-    border : none;
-}
-
-.patisserieQuizz {
-    min-height: 100vh;
-    display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    min-height: 100vh;
 }
 
-.patisserieQuizz h1 {
+.text-gradient {
+    background: var(--primary-color);
+    -webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+::placeholder {
+    color: grey;
+}
+
+h1 {
     margin: 24px 0;
     width: 100%;
     font-family: 'lobster', cursive;
     font-size: 4em;
     text-align: center;
+    font-weight: 400;
 }
 
 h2 {
+    font-weight: 400;
     font-family: 'lobster', cursive;
     font-size: 2em;
+    width: 100%;
 }
 
 header {
@@ -35,15 +38,69 @@ header {
     justify-content: space-between;
 }
 
+button {
+    border-radius: 5px;
+    border : none;
+    padding: 8px 24px;
+    font-family: 'lobster', cursive;
+    background: var(--primary-color);
+    color : white;
+    font-size: 1.5em;
+    transition-duration: 0.3s;
+    cursor: pointer;
+}
+
+button.primary:hover {
+    translate: 0px -4px;
+    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.413);
+}
+
+button.secondary {
+    font-weight: bold;
+    padding: 0;
+    font-size: 1em;
+    font-family: "Roboto";
+    text-decoration: underline;
+    background: none;
+    color: rgb(255, 255, 255);
+    border : 1px solid rgba(255, 255, 255, 0);
+}
+
+button.secondary:hover {
+    color: grey;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    height: 128px;
+    text-align: center;
+}
+
+/*** Patisserie ***/
+.patisserieQuizz {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/*** Quizz ***/
+
 .quizz {
-    background-color: rgb(21, 20, 35);
+    background-color: var(--window-background-primary );
     padding: 24px;
     border-radius: 5px;
+    width: 500px;
+    max-width: 100%;
+    line-height: 1.5em;
 }
 
 .quizz .definition{
     margin : 24px 0;
 }
+
+
+/*** ResponseBar ***/ 
 
 .reponseBar {
     display: flex;
@@ -61,28 +118,56 @@ header {
     padding : 8px 0;
 }
 
-button {
-    width: 45%;
-    padding: 8px;
-    font-family: 'lobster', cursive;
-    background-color: rgb(206, 206, 216);
-    font-size: 1.5em;
-    transition-duration: 0.3s;
+/*** InfosBar ***/
+
+.infosBar {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    column-gap: 8px;
+    padding-right: 16px;
+    margin: 8px 0;
 }
 
-button:hover {
-    translate: 0px -4px;
-    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.543);
-    cursor: pointer;
+i span {
+    transition-duration: 0.5s;
 }
 
-button.primary {
-    background: var(--primary-color);
-    color: white;
-    font-size: 1.5em;
-    font-family: 'lobster', cursive;
+i:hover span {
+    rotate: -180deg;
 }
 
-footer {
+/*** Result ***/
+.result {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 16px;
+    border-radius: 5px;
+    padding: 24px;
+    min-width: 300px;
+    background: var(--window-background-primary );
+}
+
+.result .container {
+    margin-top: 24px;
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    gap : 24px;
+}
+
+.result button {
+    display: block;
+}
+
+.result h2 {
     text-align: center;
+}
+
+.result p {
+    font-weight: 900;
+    font-size: 2em;
+    padding: 48px;
 }
