--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap');
 
 :root {
-  --background-color-primary : rgb(39, 38, 43);
+  --background-color-primary : rgb(37, 32, 56);
   --default-text-color : white;
   --primary-color : linear-gradient(90deg, rgba(44,64,195,1) 0%, rgba(160,0,255,1) 79%, rgba(174,44,176,1) 100%);
+  --window-background-primary : rgb(21, 20, 35);
 }
 
 *, ::before, ::after {
@@ -17,4 +18,23 @@ body {
   background-color: var(--background-color-primary);
   color: var(--default-text-color);
   font-family: "Roboto";
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: rgb(28, 27, 30);
+  border-radius: 5px;
+  padding: 4px;
+  transition-duration: 0.5s;
 }
